--- a/web-frontend/src/components/scrollupbutton/scrollup.css
+++ b/web-frontend/src/components/scrollupbutton/scrollup.css
@@ -1,17 +1,36 @@
+.scroll-top {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  cursor: pointer;
+  animation: fade 300ms ease-in-out 1.5s both;
+  transform: rotate(-180deg);
+  background: var(--primary-accent);
+  border-radius: 3px;
+  /* border-radius: 50%; */
+  transition: 200ms ease;
+}
+.scroll-top:hover {
+  opacity: 0.8 !important;
+  transform: translateY(-5px) rotate(-180deg);
+}
+.scroll-top-wrapper img {
+  width: 100%;
+}
+.scroll-top-wrapper {
+  padding: 8px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .scroll-top {
-    position: fixed;
-    right: 0.7rem;
-    bottom: 0.7rem;
-    cursor: pointer;
-    animation: fade 800ms ease-in-out 1.5s both;
+@keyframes fade {
+  from {
+    opacity: 0;
   }
-  
-  @keyframes fade {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
+  to {
+    opacity: 0.6;
   }
+}
